--- a/src/static/style.css
+++ b/src/static/style.css
@@ -4,7 +4,12 @@
     padding: 0;
 }
 
-#todo-list li {
+#todo-list ul {
+    list-style: none;
+    padding-inline-start: 22px;
+}
+
+#todo-list li div {
     align-items: center;
     display: flex;
     gap: .25rem;
@@ -62,7 +67,7 @@
 }
 
 #todo-list label[contenteditable=true] + button,
-#todo-list li:hover button {
+#todo-list li div:hover button {
     visibility: visible;
 }
 
