--- a/src/static/style.css
+++ b/src/static/style.css
@@ -37,6 +37,12 @@
     font-size: 16px;
 }
 
+#todo-list input[type=checkbox]:indeterminate::after {
+    content: "\eb3b";
+    font-family: codicon;
+    font-size: 16px;
+}
+
 #todo-list input[type=checkbox]:focus {
     outline: 1px solid var(--vscode-focusBorder);
     outline-offset: -1px;
