--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,4 +1,5 @@
 #todo-list {
+    height: 100vh;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -13,7 +14,7 @@
     align-items: center;
     display: flex;
     gap: .25rem;
-    margin-bottom: .5rem;
+    margin-bottom: 8px;
 }
 
 #todo-list li div:hover {
@@ -96,4 +97,8 @@
 
 #todo-list li button:hover {
     background-color: var(--vscode-toolbar-hoverBackground);
+}
+
+#todo-list li.dragging {
+    display: none;
 }
